[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reflex-githubbadge"
version = "0.0.1"
description = "Reflex custom component githubbadge"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "xs_ismadn3ss", email = "2477carlos.a@gmail.com" }]
keywords = ["reflex","reflex-custom-components"]

dependencies = ["reflex>=0.6.3.post1"]

classifiers = ["Development Status :: 4 - Beta"]

[project.urls]

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.setuptools.packages.find]
where = ["custom_components"]